--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,9 @@ repositories {
 }
 
 dependencies {
+    implementation 'ch.qos.logback:logback-classic:1.5.6'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.2'
+
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
